--- a/Intouch.Edm/Intouch.Edm/Intouch.Edm.iOS/Info.plist
+++ b/Intouch.Edm/Intouch.Edm/Intouch.Edm.iOS/Info.plist
@@ -1,74 +1,75 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
-  <dict>
-    <key>UIDeviceFamily</key>
-    <array>
-      <integer>1</integer>
-    </array>
-    <key>UISupportedInterfaceOrientations</key>
-    <array>
-      <string>UIInterfaceOrientationPortrait</string>
-    </array>
-    <key>UISupportedInterfaceOrientations~ipad</key>
-    <array>
-      <string>UIInterfaceOrientationPortrait</string>
-      <string>UIInterfaceOrientationPortraitUpsideDown</string>
-      <string>UIInterfaceOrientationLandscapeLeft</string>
-      <string>UIInterfaceOrientationLandscapeRight</string>
-    </array>
-    <key>MinimumOSVersion</key>
-    <string>10.3</string>
-    <key>CFBundleDisplayName</key>
-    <string>Bileşim Acil</string>
-    <key>CFBundleIdentifier</key>
-    <string>com.bilesim.edm</string>
-    <key>CFBundleVersion</key>
-    <string>1.0</string>
-    <key>UILaunchStoryboardName</key>
-    <string>LaunchScreen</string>
-    <key>XSAppIconAssets</key>
-    <string>Icon.xcassets/AppIcons.appiconset</string>
-    <key>NSCameraUsageDescription</key>
-    <string>This app needs access to the camera to take photos.</string>
-    <key>NSPhotoLibraryUsageDescription</key>
-    <string>This app needs access to photos.</string>
-    <key>NSPhotoLibraryAddUsageDescription</key>
-    <string>This app needs access to the photo gallery.</string>
-    <key>NSAppTransportSecurity</key>
-    <dict>
-      <key>NSAllowsArbitraryLoads</key>
-      <true />
-      <key>NSExceptionDomains</key>
-      <dict>
-        <key>yourdomain.com</key>
-        <dict>
-          <key>NSIncludesSubdomains</key>
-          <true />
-          <key>NSThirdPartyExceptionRequiresForwardSecrecy</key>
-          <false />
-        </dict>
-      </dict>
-    </dict>
-    <key>UIBackgroundModes</key>
-    <array>
-      <string>location</string>
-      <string>remote-notification</string>
-    </array>
-    <key>CFBundleShortVersionString</key>
-    <string>1.0</string>
-    <key>FirebaseAppDelegateProxyEnabled</key>
-    <false />
-    <key>CFBundleName</key>
-    <string>Intouch.Edm</string>
-    <key>UIUserInterfaceStyle</key>
-    <string>Light</string>
-    <key>NSLocationAlwaysAndWhenInUseUsageDescription</key>
-    <string>Your iOS 11 and higher background location usage description goes here.</string>
-    <!-- old properties for iOS 8 to 10 -->
-    <key>NSLocationAlwaysUsageDescription</key>
-    <string>Your iOS 10 and lower background location usage description goes here.</string>
-    <key>NSLocationWhenInUseUsageDescription</key>
-    <string>Your foreground location usage description goes here.</string>
-  </dict>
+<dict>
+	<key>UIDeviceFamily</key>
+	<array>
+		<integer>1</integer>
+	</array>
+	<key>UISupportedInterfaceOrientations</key>
+	<array>
+		<string>UIInterfaceOrientationPortrait</string>
+	</array>
+	<key>UISupportedInterfaceOrientations~ipad</key>
+	<array>
+		<string>UIInterfaceOrientationPortrait</string>
+		<string>UIInterfaceOrientationPortraitUpsideDown</string>
+		<string>UIInterfaceOrientationLandscapeLeft</string>
+		<string>UIInterfaceOrientationLandscapeRight</string>
+	</array>
+	<key>MinimumOSVersion</key>
+	<string>10.3</string>
+	<key>CFBundleDisplayName</key>
+	<string>Bileşim Acil</string>
+	<key>CFBundleIdentifier</key>
+	<string>com.bilesim.edm</string>
+	<key>CFBundleVersion</key>
+	<string>1.0</string>
+	<key>UILaunchStoryboardName</key>
+	<string>LaunchScreen</string>
+	<key>XSAppIconAssets</key>
+	<string>Icon.xcassets/AppIcons.appiconset</string>
+	<key>NSCameraUsageDescription</key>
+	<string>This app needs access to the camera to take photos.</string>
+	<key>NSPhotoLibraryUsageDescription</key>
+	<string>This app needs access to photos.</string>
+	<key>NSPhotoLibraryAddUsageDescription</key>
+	<string>This app needs access to the photo gallery.</string>
+	<key>NSAppTransportSecurity</key>
+	<dict>
+		<key>NSAllowsArbitraryLoads</key>
+		<true/>
+		<key>NSExceptionDomains</key>
+		<dict>
+			<key>yourdomain.com</key>
+			<dict>
+				<key>NSIncludesSubdomains</key>
+				<true/>
+				<key>NSThirdPartyExceptionRequiresForwardSecrecy</key>
+				<false/>
+			</dict>
+		</dict>
+	</dict>
+	<key>UIBackgroundModes</key>
+	<array>
+		<string>location</string>
+		<string>remote-notification</string>
+	</array>
+	<key>CFBundleShortVersionString</key>
+	<string>1.4.9</string>
+	<key>FirebaseAppDelegateProxyEnabled</key>
+	<false/>
+	<key>CFBundleName</key>
+	<string>Intouch.Edm</string>
+	<key>UIUserInterfaceStyle</key>
+	<string>Light</string>
+	<key>NSLocationAlwaysAndWhenInUseUsageDescription</key>
+	<string>Your iOS 11 and higher background location usage description goes here.</string>
+	<key>NSLocationAlwaysUsageDescription</key>
+	<string>Your iOS 10 and lower background location usage description goes here.</string>
+	<key>NSLocationWhenInUseUsageDescription</key>
+	<string>Your foreground location usage description goes here.</string>
+	<key>NSCalendarsUsageDescription</key>
+	<string>This app need to access your calendar events</string>
+</dict>
 </plist>
